gitops/clusters/zeus/infra/70-observability-gateway/httproute-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: zeus-gw
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - grafana.zeus
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 8080
