gitops/clusters/zeus/infra/70-observability-gateway/httproute-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: zeus-gw
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - prometheus.zeus
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
